--- a/watchlist.html
+++ b/watchlist.html
@@ -12,50 +12,49 @@
         <main>
             <header>
                 <div class="main-txt">
-                    <h1>Find your film</h1>
-                    <a href="watchlist.html"><p>My Watchlist</p></a>
+                    <h1>My Watchlist</h1>
+                    <a href="index.html"><p>Search for movies</p></a>
                 </div>
                 <div class="form-container">
                     <form>
-                        <input id="search-input" type="text" placeholder="Blade Runner">
-                        <button id="search-btn" type="submit">Search</button>
+                        <input type="text" id="search-field" placeholder="Blade Runner">
+                        <button type="submit">Search</button>
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </form>
                 </div>
             </header>
 
             <div class="results-container">
-                <!-- <div class="default-txt">
-                    <i class="fa-solid fa-film"></i>
-                    <h3>Start exploring</h3>
-                </div> -->
-                <!-- <div class="search-error">
-                    <h3>Unable to find what you’re looking for. 
-                        Please try another search.</h3>
-                </div> -->
+                <div class="default-txt">
+                    <h3>Your watchlist is looking a little empty...</h3>
+                    <div class="add-movies">
+                        <i class="fa-solid fa-circle-plus"></i>
+                        <h4>Let’s add some movies!</h4>
+                    </div>
+                </div>
 
-                <div class="movie-container">
+                <!-- <div class="movie-container">
                     <div class="flex-container">
-                        <img id="movie-poster" src="imgs/image 33.jpg" alt="img-title">   
+                        <img src="imgs/image 33.jpg" alt="img-title">   
                         <div class="movie-info">
                             <div class="row-1">
-                                <h3 id="movie-title">Blade Runner</h3>
+                                <h3>Blade Runner</h3>
                                 <i class="fa-solid fa-star"></i>
-                                <p id="movie-rating" class="rating">8.1</p>
+                                <p class="rating">8.1</p>
                             </div>
                             <div class="row-2">
-                                <p id="movie-duration" class="duration">116 min</p>
-                                <p id="movie-genre" class="genre">Drama, Mystery, Sci-fi</p>
-                                <i class="fa-solid fa-circle-plus"></i>
-                                <p id="watchlist-btn" class="watchlist">Watchlist</p>
+                                <p class="duration">116 min</p>
+                                <p class="genre">Drama, Mystery, Sci-fi</p>
+                                <i class="fa-solid fa-circle-minus"></i>
+                                <p class="watchlist">Watchlist</p>
                             </div>              
-                            <p id="movie-description" class="description">A blade runner must pursue and terminate 
+                            <p class="description">A blade runner must pursue and terminate 
                                 four replicants who stole a ship in space, and have returned 
                                 to Earth to find their creator.</p>
                         </div>
                     </div>   
-                    <div class="separator"></div>
-                </div>      
+                    <div class="separator-watch"></div>
+                </div>       -->
             </div>
         </main>
         <script src="index.js"></script>
