--- a/index.html
+++ b/index.html
@@ -25,37 +25,24 @@
             </header>
 
             <div class="results-container">
+
                 <!-- <div class="default-txt">
                     <i class="fa-solid fa-film"></i>
                     <h3>Start exploring</h3>
                 </div> -->
+
                 <!-- <div class="search-error">
                     <h3>Unable to find what you’re looking for. 
                         Please try another search.</h3>
                 </div> -->
 
-                <div class="movie-container">
-                    <div class="flex-container">
-                        <img id="movie-poster" src="imgs/image 33.jpg" alt="img-title">   
-                        <div class="movie-info">
-                            <div class="row-1">
-                                <h3 id="movie-title">Blade Runner</h3>
-                                <i class="fa-solid fa-star"></i>
-                                <p id="movie-rating" class="rating">8.1</p>
-                            </div>
-                            <div class="row-2">
-                                <p id="movie-duration" class="duration">116 min</p>
-                                <p id="movie-genre" class="genre">Drama, Mystery, Sci-fi</p>
-                                <i class="fa-solid fa-circle-plus"></i>
-                                <p id="watchlist-btn" class="watchlist">Watchlist</p>
-                            </div>              
-                            <p id="movie-description" class="description">A blade runner must pursue and terminate 
-                                four replicants who stole a ship in space, and have returned 
-                                to Earth to find their creator.</p>
-                        </div>
-                    </div>   
-                    <div class="separator"></div>
-                </div>      
+                <div id="movie" class="movie-container">
+
+  
+
+                    <!-- <div class="separator"></div>  -->
+                </div>   
+
             </div>
         </main>
         <script src="index.js"></script>
