--- a/watchlist.html
+++ b/watchlist.html
@@ -33,28 +33,10 @@
                     </div>
                 </div>
 
-                <!-- <div class="movie-container">
-                    <div class="flex-container">
-                        <img src="imgs/image 33.jpg" alt="img-title">   
-                        <div class="movie-info">
-                            <div class="row-1">
-                                <h3>Blade Runner</h3>
-                                <i class="fa-solid fa-star"></i>
-                                <p class="rating">8.1</p>
-                            </div>
-                            <div class="row-2">
-                                <p class="duration">116 min</p>
-                                <p class="genre">Drama, Mystery, Sci-fi</p>
-                                <i class="fa-solid fa-circle-minus"></i>
-                                <p class="watchlist">Watchlist</p>
-                            </div>              
-                            <p class="description">A blade runner must pursue and terminate 
-                                four replicants who stole a ship in space, and have returned 
-                                to Earth to find their creator.</p>
-                        </div>
-                    </div>   
+                <div class="movie-container">
+                    
                     <div class="separator-watch"></div>
-                </div>       -->
+                </div>      
             </div>
         </main>
         <script src="index.js"></script>
