--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -6,7 +7,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+        <link rel="shortcut icon" href="#">
     </head>
     <body>
         <main>
@@ -16,7 +18,7 @@
                     <a href="watchlist.html"><p>My Watchlist</p></a>
                 </div>
                 <div class="form-container">
-                    <form>
+                    <form id="search-form">
                         <input id="search-input" type="text" placeholder="Blade Runner">
                         <button id="search-btn" type="submit">Search</button>
                         <i class="fa-solid fa-magnifying-glass"></i>
@@ -25,26 +27,16 @@
             </header>
 
             <div class="results-container">
-
-                <!-- <div class="default-txt">
+                <div id="index-default-txt" class="default-txt">
                     <i class="fa-solid fa-film"></i>
                     <h3>Start exploring</h3>
-                </div> -->
-
-                <!-- <div class="search-error">
-                    <h3>Unable to find what you’re looking for. 
-                        Please try another search.</h3>
-                </div> -->
-
-                <div id="movie" class="movie-container">
-
-  
-
-                    <!-- <div class="separator"></div>  -->
+                </div>
+                <div id="movie-container" class="movie-container">
+                    <!-- js goes here -->
                 </div>   
 
             </div>
         </main>
-        <script src="index.js"></script>
+        <script type="module" src="index.js"></script>
     </body>
 </html>
