--- a/watchlist.html
+++ b/watchlist.html
@@ -20,7 +20,7 @@
             </header>
 
             <div class="results-container">
-                <div id="watchlist-deafult-txt" class="default-txt">
+                <div id="watchlist-default-txt" class="default-txt">
                     <h3>Your watchlist is looking a little empty...</h3>
                     <a href="index.html">
                         <div class="add-movies">
